# CampaignCaravan

./: .gitignore  .gitmodules  docker-compose.yml  index.html  index.service.worker.js
.github/workflows/: godot-ci.yml  jekyll-gh-pages.yml
c_example/: demo  meson.build
c_example/src/: main.c
campaigncaravangame/: .gitattributes  .gitignore  Card.gd  CircleSpinner.png.import  ConnectHandToCardSlots.gd  Deck.gd  DragPreview.gd  DragPreview.tscn  FaceCardSlot.tscn  GameOverModal.gd  GameRules.gd  GameRules.tscn  GameRulesScene.gd  HandCardSlot.tscn  IntLineEdit.tscn  MCMChecked.png.import  MCMUnchecked.png.import  NormalCardSlot.tscn  NumericCardSlot.tscn  SQLManager dummy.gd.gdignore  SQLManager.gd  TableTop.tscn  TextureManager.gd  Utils.gd  disable_sqlite_extension.py  drag_preview.gd  dragdropcard.gd  dragdroptest.tscn  export_presets.cfg  gothic_821_condensed_bt.ttf.import  handcardslot.gd  icon.svg.import  monofonto_rg.otf.import  player_manager.gd  project.godot
campaigncaravangame/CardDropSlots/: CardDropSlot.gd  NumericCardDropSlot.gd
campaigncaravangame/CardTextures/: 10_clover_praetorian.jpeg.import  (+61 more)
docs/: .gitignore  CampaignCaravanNavigation.drawio  Diagram 2024-09-24 12-04-16.uxf  Diagram_SQLManager.uxf  ER_diagram.xcf  ER_diagram_future.xcf  Estimeret_Tidsplan.ods  Real_Tidsplan.ods  case_beskrivelse.rst  diverse.rst  gendoc.py  godot-sqlite_generic.rst  kravspecifikation.rst  logbog.rst  procesrapport.rst  processraport.rst  produktrapport.rst  testrapport.rst
gaas_db/: .gitignore  Dockerfile  manage.py  requirements.txt
gaas_db/api/: urls.py  (+4 more)
(+140 files in other folders)
